@@ -33,7 +33,7 @@ all: $(DIRS_NEEDED) $(PROGRAMS)
 
 
 $(PROGRAMS): $(SRCROOT)/autoconf.inc
-	@echo "\t[NASM] $(@F)" 
+	@echo "	[NASM] $(@F)" 
 	@$(NASM) $(@F).s -o $@
 
 install_i386:: all $(INSTALLDIR)
@@ -41,5 +41,5 @@ install_i386:: all $(INSTALLDIR)
 	cd $(INSTALLDIR); chmod u+w $(VERSIONED_FILES) 
 
 clean-local:
-	@for p in $(PROGRAMS); do if [ -f "$${p}" ];then echo "\t[RM] $${p}"; fi; done
+	@for p in $(PROGRAMS); do if [ -f "$${p}" ];then echo "	[RM] $${p}"; fi; done
 	@rm -f $(PROGRAMS)
