@@ -105,7 +105,7 @@ MODULE_OBJS := $(addprefix $(OBJROOT)/, ${MODULE_OBJS})
 ifeq ($(BUILT_IN),yes)
 
 $(SYMROOT)/modules/$(MODULE_NAME).dylib: $(MODULE_OBJS) $(MODULE_DEPENDENCIES) $(OBJROOT)/$(MODULE_NAME).desc $(OBJROOT)/$(MODULE_NAME).author Makefile
-	@echo "\t[LD] $(MODULE_NAME).dylib"
+	@echo "	[LD] $(MODULE_NAME).dylib"
 	@ld -arch i386 -undefined dynamic_lookup \
 	-dylib -read_only_relocs suppress \
 	-S -x -Z -dead_strip_dylibs \
@@ -121,7 +121,7 @@ $(SYMROOT)/modules/$(MODULE_NAME).dylib: $(MODULE_OBJS) $(MODULE_DEPENDENCIES) $
 else
 
 $(SYMROOT)/modules/$(MODULE_NAME).dylib: $(MODULE_OBJS) $(MODULE_DEPENDENCIES) $(OBJROOT)/$(MODULE_NAME).desc $(OBJROOT)/$(MODULE_NAME).author $(SRCROOT)/obj/i386/boot2/Symbols_LINKER_ONLY.dylib Makefile
-	@echo "\t[LD] $(MODULE_NAME).dylib"
+	@echo "	[LD] $(MODULE_NAME).dylib"
 
 	@ld -arch i386 \
 	-alias _$(MODULE_START) start \
@@ -143,22 +143,22 @@ endif
 
 clean-local:
 	@if [ -f "$(SYMROOT)/modules/$(MODULE_NAME).dylib" ];then \
-        echo "\t[RM] $(SYMROOT)/modules/$(MODULE_NAME).dylib";\
+        echo "	[RM] $(SYMROOT)/modules/$(MODULE_NAME).dylib";\
     fi
-	@for o in $(MODULE_OBJS); do if [ -f "$${o}" ];then echo "\t[RM] $${o}"; fi; done
+	@for o in $(MODULE_OBJS); do if [ -f "$${o}" ];then echo "	[RM] $${o}"; fi; done
 	@rm -f $(SYMROOT)/modules/$(MODULE_NAME).dylib
 	@rm -rf $(OBJROOT)
 
 
 ${SYMROOT}/modules/:
-	@echo "\t[MKDIR] $@"
+	@echo "	[MKDIR] $@"
 	@$(MKDIRS) $@
 
 .PHONY: $(SRCROOT)/sym/i386/boot_modules.h
 .PHONY: $(SRCROOT)/sym/i386/boot_modules.c
 
 $(SRCROOT)/sym/i386/boot_modules.c: 
-	@echo "\tstart_built_in_module(\"$(MODULE_NAME)\", \"$(MODULE_AUTHOR)\", \"$(MODULE_DESCRIPTION)\", 0, 0, &$(MODULE_START));" >> $@
+	@echo "	start_built_in_module(\"$(MODULE_NAME)\", \"$(MODULE_AUTHOR)\", \"$(MODULE_DESCRIPTION)\", 0, 0, &$(MODULE_START));" >> $@
 
 $(SRCROOT)/sym/i386/boot_modules.h:
 	@echo "void $(MODULE_START)(); // $(MODULE_NAME)" >> $@
